--- a/prebuilt/ramdisk/init.antares.rc
+++ b/prebuilt/ramdisk/init.antares.rc
@@ -36,6 +36,9 @@ on fs
     setprop ro.crypto.tmpfs_options size=128m,mode=0771,uid=1000,gid=1000
     setprop ro.crypto.fuse_sdcard true
 
+#   mkdir -p /data/ubuntu/proc
+#   mount -t proc proc /data/ubuntu/proc
+
     # virtual sdcard daemon running as media_rw (1023)
     service sdcard /system/bin/sdcard /data/media /mnt/shell/emulated 1023 1023
     class late_start
@@ -83,6 +86,7 @@ on boot
 
 # backlight
     chown system system /sys/class/backlight/pwm-backlight/brightness
+    chmod 0666 /sys/class/backlight/pwm-backlight/brightness
 
 # Notification
     chown system system /sys/EcControl/HomekeyLED
@@ -193,6 +197,12 @@ on property:ro.dinfo.radio=3G
 on property:ro.carrier=wifi-only
     stop ril-daemon
 
+service resfix /system/bin/sh /system/bin/resfix
+    user root
+    group root
+    oneshot
+    class main
+ 
 service wpa_supplicant /system/bin/wpa_supplicant \
     -Dnl80211 -iwlan0 -puse_p2p_group_interface=1 -c/data/misc/wifi/wpa_supplicant.conf -e/data/misc/wifi/entropy.bin
 #   -iwlan0 -Dnl80211 -c/data/misc/wifi/wpa_supplicant.conf -e/data/misc/wifi/entropy.bin
